...
            } label: {
                Image(systemName: "xmark.circle.fill")
                    .font(.title)
                    .foregroundColor(.primary)
                    .padding(.trailing, 16)
            }
            .accessibilityIdentifier("SettingsCloseButton")
        }
        .padding(.vertical, 10)
    }
    
    // MARK: - Main Settings Content
    private var settingsContent: some View {
...
                        } else {
                            Label(layout, systemImage: "gamecontroller").tag(layout)
                        }
                    }
                }
                .pickerStyle(.menu)
                .accessibilityIdentifier("ControllerPicker")
                .onChange(of: selectedController, initial: false) {
                    // update the controller layout
                    do {
                        try LayoutManager.shared.setCurrentLayout(to: selectedController)
                        showDPadStyle = LayoutManager.shared.hasDPad
                        leftJoystickDeadzone = LayoutManager.shared.getLeftJoystickDeadzone()
...
                        if serverType == 1 {
                            bluetoothManager.updateControllerConfiguration()
                        } else {
                            NetworkManager.shared.sendLayout(true)
                        }
                    } catch {
                        UIApplication.shared.alert(title: "Failed to load layout", body: error.localizedDescription)
                        selectedController = ControllerType.getDefaultName()
                    }
                }
                .onAppear {
                    exitAllMenusCallback = exitAllMenus
                    showDPadStyle = LayoutManager.shared.hasDPad
...
                    Picker("D-PAD", selection: $splitDPad) {
                        Text("Conjoined").tag(false)
                        Text("Split").tag(true)
                    }
                    .pickerStyle(.menu)
                    .accessibilityAddTraits(.isButton)
                    .accessibilityIdentifier("DPadStyle")
                }
            }
            
            Button(action: {
                requestGameLayout.toggle()
            }) {
...
                    Button(action: {
                        showingTurboSettings = true
                    }) {
                        Text("\(Int(turboManager.turboRate)) presses/sec")
                            .foregroundColor(.blue)
                    }
                    .accessibilityIdentifier("TurboRateButton")
                }
            } header: {
                Text("Turbo Settings")
                    .font(.footnote)
                    .foregroundStyle(Color(uiColor: .secondaryLabel))
            }
...
            
            // MARK: Saving layouts (debug)
            #if DEBUG
            Section {
                // Toggle to save layout as malformed
                Toggle("Save as malformed file", isOn: $saveAsMalformed)
                    .accessibilityIdentifier("SaveAsMalformed")
                
                // Picker to choose a layout to save
                HStack {
                    Text("Save layout")
                    Spacer()
                    Button(action: {
                        showSaveLayoutPopup()
                    }) {
                        Text("Choose Template")
                    }
                    .accessibilityIdentifier("ChooseTemplate")
                }
                
                // Remove files for layout
                Button(action: {
                    do {
                        try LayoutManager.shared.setCurrentLayout(to: ControllerType.getDefaultName())
...
            if saveAsMalformed {
                try LayoutManager.shared.saveMalformedLayout(layout)
            } else {
                try LayoutManager.shared.saveLayout(layout)
            }
            try LayoutManager.shared.loadLayouts(includeControllerTypes: true)
            UIApplication.shared.alert(title: "Layout Successfully Saved", body: "It can be found in the \"Controller Type\" menu.")
        } catch {
            UIApplication.shared.alert(body: "Failed to save the layout:\n\(error.localizedDescription)")
        }
    }
    
    func showSaveLayoutPopup() {
        // TODO: refactor this later to an extension
        let alert = UIAlertController(title: "Choose a layout to save", message: "It will save it as a \(!saveAsMalformed ? "non-" : "")malformed file", preferredStyle: .actionSheet)
        
        // add the actions
        let xboxAction = UIAlertAction(title: "Xbox", style: .default) { (action) in
            saveLayoutFile(for: .Xbox)
        }
        xboxAction.accessibilityIdentifier = "Xbox Saved"
        alert.addAction(xboxAction)
        let wiiAction = UIAlertAction(title: "Wii", style: .default) { (action) in
            saveLayoutFile(for: .Wii)
        }
        wiiAction.accessibilityIdentifier = "Wii Saved"
        alert.addAction(wiiAction)
        let malformedAction = UIAlertAction(title: "Malformed", style: .default) { (action) in
            // make a malformed layout
            let badLayout = LayoutConfig.init(name: "Malformed", buttons: [
                BadButtonTypeConfig(position: .init(scaledPos: CGPointZero), scale: 0.0, rotation: 0.0, type: .joystick, inputId: 0)
            ])
...
                try LayoutManager.shared.saveLayout(badLayout)
                UIApplication.shared.alert(title: "Layout Successfully Saved", body: "It can be found in the \"Controller Type\" menu.")
            } catch {
                UIApplication.shared.alert(title: "Failed to save the layout", body: error.localizedDescription)
            }
        }
        malformedAction.accessibilityIdentifier = "MalformedLayout"
        alert.addAction(malformedAction)
        
        let cancelAction = UIAlertAction(title: NSLocalizedString("Cancel", comment: ""), style: .cancel) { (action) in
            // cancels the action
        }
        alert.addAction(cancelAction)
...
