...
                        ZStack {
                            Group {
                                switch btn.wrappedValue.type {
                                case .regular:
                                    RegularButtonView(config: btn.wrappedValue as! RegularButtonConfig, isInMacroEditor: isInMacroEditor, showKeyboard: $showKeyboard, keyboardInput: $keyboardInput)
                                        .accessibilityAddTraits(.isButton)
                                        .accessibilityIdentifier("ControllerButton")
                                case .joystick:
                                    JoystickButtonView(config: btn.wrappedValue as! JoystickConfig, isInMacroEditor: isInMacroEditor)
                                        .accessibilityAddTraits(.isButton)
                                        .accessibilityIdentifier("ControllerButton")
                                case .dpad:
                                    DPadButtonView(config: btn.wrappedValue as! DPadConfig, isInMacroEditor: isInMacroEditor)
...
                    showExitConfirmAlert = false
                }
                Button("Exit") {
                    showExitConfirmAlert = false
                    presentationMode.wrappedValue.dismiss()
                }
                .accessibilityIdentifier("ConfirmExit")
            })
            .alert("Delete Layout", isPresented: $showDeleteAlert, actions: {
                Button("Cancel", role: .cancel) {
                    showDeleteAlert = false
                }
                Button("Delete", role: .destructive) {
...
        }
        .ignoresSafeArea(.keyboard, edges: isInMacroEditor ? .all : []) // Prevent controller background view from shifting when a keyboard is used to name a macro in the macro editor
        .coordinateSpace(.named("Controller"))
        .navigationTitle("Controller")
        .navigationBarTitleDisplayMode(.inline)
        .accessibilityElement(children: .contain)
        .accessibilityIdentifier("MainControllerScreen")
        .navigationBarBackButtonHidden()
        .defersSystemGestures(on: .all)
    }
    
    func isSafe(geometry: GeometryProxy) -> Bool {
        guard !selectedBtn.isEmpty else { return true }
...
