...
                
                // Center Circle
                Circle()
                    .stroke(getStrokeColor(), style: StrokeStyle(lineWidth: 1.5))
                    .frame(width: DPAD_THICKNESS - 8, height: DPAD_THICKNESS - 8)
                    .accessibilityAddTraits(.isButton)
                    .accessibilityIdentifier("DPadConjoined")
            }
            
            // Horizontal directional arrows
            HStack {
                DirectionalArrow(split: split, rotation: -90, input: .DPadLeft, direction: .left, config: config, isInMacroEditor: isInMacroEditor) // left arrow
                Spacer()
                DirectionalArrow(split: split, rotation: 90, input: .DPadRight, direction: .right, config: config, isInMacroEditor: isInMacroEditor) // right arrow
                    .accessibilityIdentifier("DPadButton")
            }
            .frame(maxHeight: DPAD_THICKNESS)
            .accessibilityAddTraits(.isButton)
            
            // Vertical directional arrows
            VStack {
...
