//
//  PocketPad_ClientUITests.swift
//  PocketPad ClientUITests
//
//  Created by lemin on 2/17/25.
//

import XCTest

final class PocketPad_ClientUITests: XCTestCase {
    
    private var TIMEOUT: TimeInterval = 15

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    @MainActor
    func testOpenandCloseSettingsMenu() throws {
        let app = XCUIApplication()
        app.launchArguments = ["hide-tips", "no-tutorial"]
        app.launch()
        
        let settingsBtn = app.buttons["SettingsGearButton"]
        guard settingsBtn.waitForExistence(timeout: TIMEOUT) else{
            XCTFail("Settings button open not found")
            return
        }
        
        settingsBtn.tap()
        let settingsCloseBtn = app.buttons["SettingsCloseButton"]
        guard settingsCloseBtn.waitForExistence(timeout: TIMEOUT) else{
            XCTFail("Settings button close not found")
            return
        }
        settingsCloseBtn.tap()
    }
    
    @MainActor
    func testDPadStyle() throws {
        let app = XCUIApplication()
        app.launchArguments = ["hide-tips", "no-tutorial"]
        app.launch()
        
        let dpadTypes = ["Conjoined", "Split"]
        let settingsBtn = app.buttons["SettingsGearButton"]
        let dpadStyle = app.buttons["DPadStyle"]
        let settingsCloseBtn = app.buttons["SettingsCloseButton"]
        let controllerViewBtn = app.buttons["OpenControllerView"]
        
        var choseController: Bool = false
        for dpadType in dpadTypes {
            // open settings menu
            guard settingsBtn.waitForExistence(timeout: TIMEOUT) else {
                XCTFail("Settings button open not found")
                return
            }
            settingsBtn.tap()
            
            if !choseController {
                choseController = true
                // make sure a controller with a dpad is selected
                let controllerPicker = app.buttons["ControllerPicker"]
                guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
                    XCTFail()
                    return
                }
                controllerPicker.tap()
                
                let controllerBtn = app.buttons["Xbox"]
                guard controllerBtn.waitForExistence(timeout: TIMEOUT) else {
                    XCTFail()
                    return
                }
                controllerBtn.tap()
            }
            
            // select dpad style
            XCTAssertTrue(dpadStyle.waitForExistence(timeout: TIMEOUT))
            dpadStyle.tap()
            let dpadOption = app.buttons[dpadType]
            guard dpadOption.waitForExistence(timeout: TIMEOUT) else {
                XCTFail()
                return
            }
            dpadOption.tap()
            
            // close settings and go to controller view
            XCTAssertTrue(settingsCloseBtn.exists)
            settingsCloseBtn.tap()
            
            guard controllerViewBtn.waitForExistence(timeout: TIMEOUT) else {
                XCTFail("ControllerViewButton not found")
                return
            }
            controllerViewBtn.tap()
            
            // make sure that the dpad exists and is the correct type
            if dpadType == "Conjoined" {
                // test for conjoined dpad
                XCTAssertTrue(app.buttons["DPadConjoined"].waitForExistence(timeout: TIMEOUT))
            } else if dpadType == "Split" {
                // test for split dpad
                XCTAssertTrue(app.buttons["DPadButton"].waitForExistence(timeout: TIMEOUT))
                XCTAssertFalse(app.buttons["DPadConjoined"].exists)
            } else {
                XCTFail("Invalid dpad type")
            }
            
            // go back to the previous view
            app.navigationBars.buttons.element(boundBy: 0).tap()
            if app.buttons["ConfirmExit"].waitForExistence(timeout: 3) {
                app.buttons["ConfirmExit"].tap()
            }
        }
    }
    
    @MainActor
    func testControllerDisplay() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launchArguments = ["hide-tips", "no-tutorial"]
        app.launch()

        let validControllers = ["Xbox", "PlayStation", "Switch", "Wii", "GameCube"]
        let controllerBtnCount = [
            "Xbox": 14,
            "PlayStation": 13,
            "Switch": 15,
            "Wii": 8,
            "GameCube": 11
        ]
        
        // Define the buttons
        let settingsBtn = app.buttons["SettingsGearButton"]
        let settingsCloseBtn = app.buttons["SettingsCloseButton"]
        let controllerViewBtn = app.buttons["OpenControllerView"]
        let controllerPicker = app.buttons["ControllerPicker"]
        
        for validController in validControllers {
            guard settingsBtn.waitForExistence(timeout: TIMEOUT) else {
                XCTFail()
                return
            }
            settingsBtn.tap()
            
            // select the controller from the picker
            guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
                XCTFail()
                return
            }
            controllerPicker.tap()
            
            let controllerBtn = app.buttons[validController]
            guard controllerBtn.waitForExistence(timeout: TIMEOUT) else {
                XCTFail()
                return
            }
            controllerBtn.tap()
            XCTAssertTrue(settingsCloseBtn.exists)
            settingsCloseBtn.tap()
            
            // open up the controller view
            guard controllerViewBtn.waitForExistence(timeout: TIMEOUT) else {
                XCTFail()
                return
            }
            controllerViewBtn.tap()
            
            XCTAssertTrue(app.buttons["ControllerButton"].waitForExistence(timeout: TIMEOUT))
            
            // make sure the count of the buttons is equal to the specified controller setup
            XCTAssertEqual(app.buttons.matching(identifier: "ControllerButton").count + app.buttons.matching(identifier: "DPadButton").count, controllerBtnCount[validController])
            
            // go back to the previous view
            app.navigationBars.buttons.element(boundBy: 0).tap()
            if app.buttons["ConfirmExit"].waitForExistence(timeout: 3) {
                app.buttons["ConfirmExit"].tap()
            }
        }
    }
    
    @MainActor
    func testLayoutSaving() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launchArguments = ["hide-tips", "no-tutorial", "remove-layouts"]
        app.launch()
        
        let alertDismiss = app.alerts.element.buttons["AlertCancel"]
        
        // open settings
        let settingsBtn = app.buttons["SettingsGearButton"]
        guard settingsBtn.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        settingsBtn.tap()
        
        // make sure that the buttons don't exist in the list
        let controllerPicker = app.buttons["ControllerPicker"]
        guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        controllerPicker.tap()
        XCTAssertTrue(app.buttons["Xbox"].waitForExistence(timeout: TIMEOUT))
        XCTAssertFalse(app.buttons["Xbox Saved"].exists)
        XCTAssertFalse(app.buttons["Wii Saved"].exists)
        app.buttons["Xbox"].tap()
        
        let chooseTemplate = app.buttons["ChooseTemplate"]
        XCTAssertTrue(chooseTemplate.exists)
        chooseTemplate.tap()
        
        // try to save malformed
        let malformedBtn = app.buttons["MalformedLayout"]
        XCTAssertTrue(malformedBtn.waitForExistence(timeout: TIMEOUT))
        malformedBtn.tap()
        
        XCTAssertTrue(alertDismiss.waitForExistence(timeout: TIMEOUT))
        XCTAssertTrue(app.alerts.element.staticTexts["Failed to save the layout"].exists)
        alertDismiss.tap()
        
        // try to save xbox
        XCTAssertTrue(chooseTemplate.waitForExistence(timeout: TIMEOUT))
        chooseTemplate.tap()
        let xboxBtn = app.buttons["Xbox Saved"]
        XCTAssertTrue(xboxBtn.waitForExistence(timeout: TIMEOUT))
        xboxBtn.tap()
        XCTAssertTrue(alertDismiss.waitForExistence(timeout: TIMEOUT))
        XCTAssertTrue(app.alerts.element.staticTexts["Layout Successfully Saved"].exists)
        alertDismiss.tap()
        // make sure it is in the list
        guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        controllerPicker.tap()
        XCTAssertTrue(xboxBtn.waitForExistence(timeout: TIMEOUT))
        xboxBtn.tap()
        
        // try to save malformed wii
        let saveMalformed = app.switches["SaveAsMalformed"]
        XCTAssertTrue(saveMalformed.waitForExistence(timeout: TIMEOUT))
        saveMalformed.tap()
        XCTAssertTrue(chooseTemplate.exists)
        chooseTemplate.tap()
        let wiiBtn = app.buttons["Wii Saved"]
        XCTAssertTrue(wiiBtn.waitForExistence(timeout: TIMEOUT))
        wiiBtn.tap()
        XCTAssertTrue(alertDismiss.waitForExistence(timeout: TIMEOUT))
        XCTAssertTrue(app.alerts.element.staticTexts["Layout Successfully Saved"].exists)
        alertDismiss.tap()
        // make sure it is in the list
        guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        controllerPicker.tap()
        XCTAssertTrue(wiiBtn.waitForExistence(timeout: TIMEOUT))
        wiiBtn.tap()
        XCTAssertTrue(alertDismiss.waitForExistence(timeout: TIMEOUT))
        XCTAssertTrue(app.alerts.element.staticTexts["Failed to load layout"].exists)
        alertDismiss.tap()
    }
    
    @MainActor
    func testHideDPad() throws {
        // tests if the settings view dpad option hides when a gamepad without a dpad is selected
        continueAfterFailure = false
        let app = XCUIApplication() // Initializes the XCTest app
        app.launchArguments = ["hide-tips", "no-tutorial"]
        app.launch() // Launches the app
        
        // make it go to the view
        let settingsBtn = app.buttons["SettingsGearButton"]
        guard settingsBtn.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        settingsBtn.tap()
        
        let controllerPicker = app.buttons["ControllerPicker"]
        guard controllerPicker.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        
        controllerPicker.tap()
        
        // set current controller to one that has a dpad
        let xboxBtn = app.buttons["Xbox"]
        guard xboxBtn.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        xboxBtn.tap()
        
        // DPad style should exist now
        let dpadStyleBtn = app.buttons["DPadStyle"]
        XCTAssertTrue(dpadStyleBtn.waitForExistence(timeout: TIMEOUT))
        
        controllerPicker.tap()
        
        // set to current controller without dpad
        let dpadlessBtn = app.buttons["DPad-less Test"]
        guard dpadlessBtn.waitForExistence(timeout: TIMEOUT) else {
            XCTFail()
            return
        }
        dpadlessBtn.tap()
        
        // make sure the button is no longer there
        XCTAssertTrue(dpadStyleBtn.waitForNonExistence(timeout: TIMEOUT))
    }
    
    @MainActor
    func testOrientationLock() throws {
        // tests that the orientation locks properly
        continueAfterFailure = false
        let app = XCUIApplication() // Initializes the XCTest app
        app.launchArguments = ["hide-tips", "no-tutorial"]
        app.launch() // Launches the app
        
        // Define the buttons
        let settingsBtn = app.buttons["SettingsGearButton"]
        let settingsCloseBtn = app.buttons["SettingsCloseButton"]
        let controllerViewBtn = app.buttons["OpenControllerView"]
        let controllerPicker = app.buttons["ControllerPicker"]
        
        let tests = [
            [
                "Controller": "Xbox",
                "Orientation": UIDeviceOrientation.landscapeLeft
            ],
            [
                "Controller": "Wii",
                "Orientation": UIDeviceOrientation.portrait
            ],
            [
                "Controller": "Wii",
                "Orientation": UIDeviceOrientation.landscapeLeft
            ],
            [
                "Controller": "GameCube",
                "Orientation": UIDeviceOrientation.landscapeRight
            ]
        ]
        
        XCUIDevice.shared.orientation = .portrait
        
        for test in tests {
            if let controller = test["Controller"] as? String, let orien = test["Orientation"] as? UIDeviceOrientation {
                XCTAssertTrue(XCUIDevice.shared.orientation.isPortrait, "The device is not in portrait!")
                // set the controller
                XCTAssertTrue(settingsBtn.waitForExistence(timeout: TIMEOUT), "The settings button did not appear")
                settingsBtn.tap()
                XCTAssertTrue(controllerPicker.waitForExistence(timeout: TIMEOUT), "The controller picker did not appear")
                controllerPicker.tap()
                let controllerBtn = app.buttons[controller]
                guard controllerBtn.waitForExistence(timeout: TIMEOUT) else {
                    XCTFail()
                    return
                }
                controllerBtn.tap()
                XCTAssertTrue(settingsCloseBtn.waitForExistence(timeout: TIMEOUT), "The settings close button does not exist")
                settingsCloseBtn.tap()
                // set the orientation if it is Wii landscape
                if (controller == "Wii" && orien == .landscapeLeft) || orien == .landscapeRight {
                    XCUIDevice.shared.orientation = orien
                }
                
                // open up the controller menu and assert that the orientation was set
                XCTAssertTrue(controllerViewBtn.waitForExistence(timeout: TIMEOUT), "The controller view button does not exist")
                controllerViewBtn.tap()
                let mainEditorView = app.otherElements["MainControllerScreen"]
                XCTAssertTrue(mainEditorView.waitForExistence(timeout: TIMEOUT), "The main controller screen could not be found.")
                let editorSize = mainEditorView.frame.size
                // assert that the orientation is correct
                XCTAssertTrue(orien.isPortrait ? editorSize.height > editorSize.width : editorSize.width > editorSize.height, "The orientation did not change to the proper orientation")
                // go back to the previous view
                app.navigationBars.buttons.element(boundBy: 0).tap()
                if app.buttons["ConfirmExit"].waitForExistence(timeout: 3) {
                    app.buttons["ConfirmExit"].tap()
                }
                XCUIDevice.shared.orientation = .portrait
            }
        }
    }
    
    @MainActor
    func testChangeTurboRate() throws {
        let app = XCUIApplication()
        app.launch()
        
        let settingsBtn = app.buttons["SettingsGearButton"]
        let settingsCloseBtn = app.buttons["SettingsCloseButton"]
        let turboRateBtn = app.buttons["TurboRateButton"]
        
        let turboRateSlider = app.sliders["TurboRateSlider"]
        let turboSettingsRateStaticText = app.staticTexts["TurboSettingsRate"]
        let applyTurboRateBtn = app.buttons["ApplyTurboRateButton"]
        
        // Open settings menu
        guard settingsBtn.waitForExistence(timeout: 3) else {
            XCTFail("Settings button open not found")
            return
        }
        settingsBtn.tap()
        
        // Open turbo rate settings menu
        guard turboRateBtn.waitForExistence(timeout: 1) else {
            XCTFail("Turbo rate button not found")
            return
        }
        turboRateBtn.tap()
        
        // Moving slider
        guard turboRateSlider.waitForExistence(timeout: 1) else {
            XCTFail("Slider not found")
            return
        }
        turboRateSlider.adjust(toNormalizedSliderPosition: Double.random(in: 0.0...1.0)) // random value
        
        print(app.debugDescription)
        
        // Store the new value that the turbo rate slider was set to
        guard turboSettingsRateStaticText.waitForExistence(timeout: 5) else {
            XCTFail("Turbo settings rate static text not found")
            return
        }
        let turboRateExpected: String? = turboSettingsRateStaticText.label.components(separatedBy: " ").first // extract number
        
        // Apply changes
        guard applyTurboRateBtn.waitForExistence(timeout: 1) else {
            XCTFail("Apply turbo rate button not found")
            return
        }
        applyTurboRateBtn.tap()
        
        // Close settings
        XCTAssertTrue(settingsCloseBtn.exists)
        settingsCloseBtn.tap()
        
        // Reopen settings menu to check new turbo rate value
        guard settingsBtn.waitForExistence(timeout: 3) else {
            XCTFail("Settings button open not found")
            return
        }
        settingsBtn.tap()
        
        // Check new turbo rate value
        guard turboRateBtn.waitForExistence(timeout: 1) else {
            XCTFail("Turbo rate button not found")
            return
        }
        print("DEBUGGING Label is: \(turboRateBtn.label)")
        let turboRateActual: String? = turboRateBtn.label.components(separatedBy: " ").first // extract number
        XCTAssertTrue(turboRateActual != nil && turboRateExpected != nil && turboRateActual == turboRateExpected)
    }

//    @MainActor
//    func testLaunchPerformance() throws {
//        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
//            // This measures how long it takes to launch your application.
//            measure(metrics: [XCTApplicationLaunchMetric()]) {
//                XCUIApplication().launch()
//            }
//        }
//    }
}
